--- a/index.html
+++ b/index.html
@@ -230,7 +230,10 @@
   </style>
 </head>
 <body data-theme="dark">
-  <button class="toggle" onclick="toggleTheme()">Toggle Theme</button>
+ <button class="toggle" onclick="toggleTheme()" id="themeToggle" aria-label="Toggle Theme">
+  <i class="fas fa-moon"></i>
+</button>
+
 
   <div class="container">
     <img src="me2.png" alt="profile" class="profile-pic" />
@@ -309,5 +312,27 @@
       }
     };
   </script>
+<script>
+  const themeToggleBtn = document.getElementById("themeToggle");
+  const icon = themeToggleBtn.querySelector("i");
+
+  function updateThemeIcon() {
+    const isDark = document.body.getAttribute("data-theme") === "dark";
+    icon.className = isDark ? "fas fa-moon" : "fas fa-sun";
+  }
+
+  function toggleTheme() {
+    const body = document.body;
+    const currentTheme = body.getAttribute("data-theme");
+    const newTheme = currentTheme === "dark" ? "light" : "dark";
+    body.setAttribute("data-theme", newTheme);
+    updateThemeIcon();
+  }
+
+  // Initialize icon on page load
+  updateThemeIcon();
+</script>
+
 </body>
 </html>
+
