--- a/index.html
+++ b/index.html
@@ -250,6 +250,10 @@
       <a href="https://www.threads.net/@rynsktx">
         <i class="fas fa-comment-dots"></i> Threads
       </a>
+      <a href="https://ko-fi.com/rynsktz" target="_blank">
+  <i class="fa-solid fa-mug-hot"></i> Ko-fi
+</a>
+
       <a href="#" class="patreon-link tooltip" onclick="openNSFWModal(event)" aria-label="Patreon link with NSFW warning">
         <i class="fab fa-patreon"></i> Patreon
         <span class="badge-18plus">18+</span>
