--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <a href="https://www.threads.net/@rynsktx">
         <i class="fas fa-comment-dots"></i> Threads
       </a>
-      <a href="https://ko-fi.com/rynsktz" target="_blank">
+      <a href="https://ko-fi.com/rynsktx" target="_blank">
   <i class="fa-solid fa-mug-hot"></i> Ko-fi
 </a>
 
